[gd_scene load_steps=7 format=2]

[ext_resource path="res://cursor.gd" type="Script" id=1]
[ext_resource path="res://batmanslider.png" type="Texture" id=2]
[ext_resource path="res://Tiles.gd" type="Script" id=3]
[ext_resource path="res://Area2D.gd" type="Script" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[node name="game" type="Node2D"]

[node name="slider" type="Node2D" parent="."]
position = Vector2( 0, 64 )

[node name="Tiles" type="Node" parent="slider"]
script = ExtResource( 3 )

[node name="tile01" type="Area2D" parent="slider/Tiles"]
position = Vector2( 160, 160 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="slider/Tiles/tile01"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slider/Tiles/tile01"]
shape = SubResource( 1 )

[node name="Tween3" type="Tween" parent="slider/Tiles"]

[node name="cursor" type="Node2D" parent="slider"]
position = Vector2( 64, 64 )
z_index = 2
script = ExtResource( 1 )
x = 1
y = 1

[node name="Line2D" type="Line2D" parent="slider/cursor"]
points = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0, 0, 0 )
width = 4.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="right_arrow" type="Polygon2D" parent="slider/cursor"]
modulate = Color( 0.105882, 0.0823529, 0.839216, 0 )
color = Color( 0.101961, 0.184314, 0.643137, 1 )
polygon = PoolVector2Array( -60, 28, -32, 28, -32, 4, -4, 32, -32, 60, -32, 36, -60, 36 )

[node name="down_arrow" type="Polygon2D" parent="slider/cursor"]
modulate = Color( 0.105882, 0.0823529, 0.839216, 0 )
position = Vector2( 64, 0 )
rotation = 1.5708
color = Color( 0.101961, 0.184314, 0.643137, 1 )
polygon = PoolVector2Array( -60, 28, -32, 28, -32, 4, -4, 32, -32, 60, -32, 36, -60, 36 )

[node name="up_arrow" type="Polygon2D" parent="slider/cursor"]
modulate = Color( 0.0901961, 0.0666667, 0.780392, 0 )
position = Vector2( 0, 64 )
rotation = 4.71239
color = Color( 0.101961, 0.184314, 0.643137, 1 )
polygon = PoolVector2Array( -60, 28, -32, 28, -32, 4, -4, 32, -32, 60, -32, 36, -60, 36 )

[node name="left_arrow" type="Polygon2D" parent="slider/cursor"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 66, 64 )
rotation = 3.14159
color = Color( 0.101961, 0.184314, 0.643137, 1 )
polygon = PoolVector2Array( -60, 28, -32, 28, -32, 4, -4, 32, -32, 60, -32, 36, -60, 36 )

[node name="Tween" type="Tween" parent="slider/cursor"]

[node name="Tween2" type="Tween" parent="slider/cursor"]

[node name="background" type="Sprite" parent="."]
position = Vector2( 27.2613, 18.1046 )
scale = Vector2( 0.43, 0.43 )
texture = ExtResource( 5 )
centered = false
[connection signal="input_event" from="slider/Tiles/tile01" to="slider/Tiles/tile01" method="_on_tile01_input_event"]
[connection signal="tween_completed" from="slider/Tiles/Tween3" to="slider/Tiles/tile01" method="_on_Tween3_tween_completed"]
[connection signal="tween_started" from="slider/Tiles/Tween3" to="slider/Tiles/tile01" method="_on_Tween3_tween_started"]
